--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>タイトル</title>
   </head>
   <body>
-    <strong style="color: red">書き換えられたテキスト</strong>
+    <strong style="color: blue">書き換えられたテキスト</strong>
   </body>
 </html>
